# Base_cmake_config

./: CMakeLists.txt  build.sh  readme.md
src/: Main.cpp
